2014-01-10  Moritz Bunkus  <moritz@bunkus.org>

        * mkvmerge: re-built with the 64bit build for Windows with a newer
        compiler version in order to fix #957. It was due to a bug in gcc:
        http://gcc.gnu.org/bugzilla/show_bug.cgi?id=56742

        * mmg: bug fix: mkvmerge's file identification is written to a
        temporary file with --redirect-output and from there into mmg
        instead of directly from mkvmerge. This prevents from character
        re-coding done by wxWidgets 3.0.0 on Windows. Fixes #959.

2014-01-09  Moritz Bunkus  <moritz@bunkus.org>

        * installer: enhancement: the architecture (32bit vs 64bit) is
        mentioned in the interface.

        * installer: bug fix: the installation directory for 64bit builds
        will default to the proper directory (»C:\Program Files« instead
        of »C:\Program Files (x86)«). Fixes #956.

2014-01-08  Moritz Bunkus  <moritz@bunkus.org>

        * Released v6.7.0.

        * build system: Ruby 1.9.x is now required.

2014-01-05  Moritz Bunkus  <moritz@bunkus.org>

        * all: enhancement: The architecture (32bit/64bit) is mentioned in
        the version information of all programs.

2014-01-02  Moritz Bunkus  <moritz@bunkus.org>

        * build system: bug fix for 64bit builds on Windows
        (x86_64-w64-mingw32): use the correct processor architecture via
        separate Windows manifest files. Fixes mmg and mkvinfo not
        starting due to »error 0x0000007b«.

        * mkvmerge: bug fix: Fixed a potential endless loop due to an
        integer overflow in the code removing AVC/h.264 filler NALUs.

2014-01-01  Moritz Bunkus  <moritz@bunkus.org>

        * mkvmerge: bug fix: Fixed reading uncompressed PCM audio tracks
        from QuickTime/MP4 files in certain situations. Fixes #950.

        * mmg: enhancement: Made the »scanned files« list box sortable by
        all columns. Fixes #954.

2013-12-31  Moritz Bunkus  <moritz@bunkus.org>
