@@ -1,3 +1,9 @@
+2014-01-11  Moritz Bunkus  <moritz@bunkus.org>
+
+        * mkvmerge: enhancement: attachments in Matroska files with a
+        missing FileUID element are not ignored as violating the specs
+        anymore. A new FileUID is generated instead.
+
 2014-01-10  Moritz Bunkus  <moritz@bunkus.org>
 
         * mkvmerge: re-built with the 64bit build for Windows with a newer
